# ldbc-graphalytics-platforms-networkit

./: README.md  init.sh  pom.xml
config-template/: benchmark.properties  platform.properties
src/main/c/: CMakeLists.txt
src/main/c/include/: utils.h
src/main/c/src/: utils.cpp
src/main/c/src/algorithms/: bfs.cpp  lcc.cpp  pr.cpp  sssp.cpp  wcc.cpp
src/main/java/science/atlarge/graphalytics/networkit/: NetworkitCollector.java  NetworkitConfiguration.java  NetworkitJob.java  NetworkitLoader.java  NetworkitPlatform.java  ProcTimeLog.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/bfs/: BreadthFirstSearchJob.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/cdlp/: CommunityDetectionLPJob.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/lcc/: LocalClusteringCoefficientJob.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/pr/: PageRankJob.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/sssp/: SingleSourceShortestPathsJob.java
src/main/java/science/atlarge/graphalytics/networkit/algorithms/wcc/: WeaklyConnectedComponentsJob.java
